<resources>
    <string name="app_name">办公助手</string>

    <!--首页-->
    <string name="left_menu_user_name">未登陆</string>
    <string name="left_menu_enclosure">备选附件</string>
    <string name="left_menu_Inbox">收件箱</string>
    <string name="left_menu_login">登陆</string>
    <string name="left_menu_logout">注销</string>
    <string name="open_file_error">打开文件失败，请再次尝试</string>

    <string name="btn_title_files">文件管理</string>
    <string name="btn_title_email">邮件中心</string>
    <string name="btn_title_collection">收藏夹</string>
    <string name="btn_title_history">浏览历史</string>
    <string name="btn_title_photo">图像解析</string>
    <string name="btn_title_setting">软件设置</string>
    <string name="home_email_login_err">邮箱自动登录失败，请尝试手动登录</string>

    <!--登录-->
    <string name="login_title">登录</string>
    <string name="login_hint_email">邮箱</string>
    <string name="login_hint_password">密码/授权码</string>
    <string name="login_is_save">记住我</string>
    <string name="login_btn_login">登录</string>
    <string name="login_btn_cancel">取消</string>
    <string name="login_loading">登录中</string>
    <string name="login_err1">邮箱格式不正确</string>
    <string name="login_err2">请输入密码/授权码</string>
    <string name="login_err3">登录失败，账号/密码错误</string>

    <!--文件管理-->
    <string name="file_menage_title">文件管理</string>
    <string name="file_menage_open_err">该文件不支持打开</string>
    <string name="file_bar_btn_cancel">取消</string>
    <string name="file_bar_btn_select_all">全部</string>
    <string name="file_bar_btn_select_number1">已选择</string>
    <string name="file_bar_btn_select_number2">项</string>
    <string name="file_menage_copy">复制</string>
    <string name="file_menage_move">移动</string>
    <string name="file_menage_rename">重命名</string>
    <string name="file_menage_delete">删除</string>
    <string name="file_menage_detail">详情</string>
    <string name="file_menage_delete_cancel">取消</string>
    <string name="file_menage_delete_text1">删除</string>
    <string name="file_menage_delete_text2">个文件</string>
    <string name="file_menage_inquiry_cancel">取消</string>
    <string name="file_menage_inquiry_copy">复制到这里</string>
    <string name="file_menage_inquiry_move">移动到这里</string>

    <string name="file_select_err">选择文件错误</string>
    <string name="file_dialog_err1">请输入文件名</string>
    <string name="file_dialog_err2">该文件已存在，请重新输入文件名</string>
    <string name="file_dialog_err3">文件重命名失败</string>
    <string name="file_dialog_err4">新建文件夹失败</string>
    <string name="file_right_menu_err1">文件目录无法加入至附件</string>
    <string name="file_right_menu_err2">文件已经收藏过了</string>
    <string name="file_right_menu_err3">文件已经在代发附件列表了</string>
    <string name="file_right_menu_err4">文件目录无法无法分享</string>
    <string name="file_right_collection_item_name">收藏</string>
    <string name="file_right_enclosure_item_name">附件</string>
    <string name="file_right_share_item_name">分享</string>
    <string name="file_right_list_item_name">打开位置</string>


    <!--文件浏览-->
    <string name="file_reader_title">文件浏览</string>
    <string name="file_reader_open_err">文件打开失败</string>
    <string name="file_reader_photo_analysis">解析</string>

    <!--图片解析-->
    <string name="photo_title">图像解析</string>
    <string name="photo_select_file_btn">选择图片</string>
    <string name="photo_photo_file_btn">拍照</string>
    <string name="photo_photo_loading">解析中</string>
    <string name="photo_btn_retry">重试</string>
    <string name="photo_btn_copy">复制</string>
    <string name="photo_select_all">全选</string>
    <string name="photo_btn_copy_hint">文本已复制到剪切板中</string>

    <string name="setting_title">软件设置</string>
    <string name="setting_option1">显示隐藏文件</string>
    <string name="setting_option2">搜索时过滤缓存目录</string>
    <string name="setting_option3">清除缓存</string>
    <string name="setting_exit_account">退出登录</string>

    <!--我的收藏-->
    <string name="collection_title">收藏夹</string>
    <string name="item_collection_btn">取消收藏</string>

    <!--邮箱-->
    <string name="email_title">邮件中心</string>
    <string name="email_login_err1">自动登录失败，邮箱/密码错误</string>
    <string name="email_search_hint">搜索</string>
    <string name="email_item_menu_delete">删除</string>
    <string name="email_loading_error">邮件加载中，请稍后再试</string>


    <!--邮件阅读-->
    <string name="read_email_title">邮件阅读</string>
    <string name="read_email_sender">发件人</string>
    <string name="read_email_enclosure">附件</string>
    <string name="read_email_item_btn">下载</string>
    <string name="read_email_download_hint">附件下载中</string>
    <string name="read_email_download_err">附件下载失败</string>
    <string name="read_email_download_200">附件下载成功</string>

    <!--发送邮件-->
    <string name="send_email_title">发送邮件</string>
    <string name="send_email_content_reader">收件人</string>
    <string name="send_email_content_title">主题</string>
    <string name="send_email_content_enclosure">待发附件</string>
    <string name="send_email_format_text_color">文字颜色</string>
    <string name="send_email_format_background_color">背景颜色</string>
    <string name="send_email_hint">编辑邮件内容...</string>
    <string name="send_email_item_delete">删除</string>
    <string name="send_email_enclosure_detail_no">暂无附件，请去文件管理添加</string>
    <string name="send_email_enclosure_detail">个附件，共</string>
    <string name="send_email_err1">收件人邮箱地址错误</string>
    <string name="send_email_err2">邮件主题必须填写</string>
    <string name="send_email_err3">邮件正文必须填写</string>
    <string name="send_email_err400">邮件发送失败，请稍后再试</string>
    <string name="send_email_200">邮件发送成功</string>
    <string name="send_email_big_enclosure_hint">邮件附件过大，发送时间可能过长，是否继续？</string>
    <string name="send_email_loading_hint">邮件发送中</string>

    <!--文件搜索-->
    <string name="file_search_hint">请输入搜索内容</string>
    <string name="file_search_word">DOC</string>
    <string name="file_search_excel">XLS</string>
    <string name="file_search_ppt">PPT</string>
    <string name="file_search_loading">搜索中</string>
    <string name="file_search_no_file">未搜索到匹配文件</string>
    <string name="file_search_no_file1">没有文件</string>
    <string name="file_search_no_file2">暂时未找到指定的文件，请确认文件是否存在</string>

    <!--弹窗-->
    <string name="dialog_file_rename_title">重命名</string>
    <string name="dialog_file_rename_hint">请在下方输入新文件名</string>
    <string name="dialog_file_rename_input_hint">文件名</string>
    <string name="dialog_file_rename_btn">确定</string>

    <string name="dialog_file_new_file_title">新建文件夹</string>
    <string name="dialog_file_new_file_hint">请在下方输入文件夹名</string>
    <string name="dialog_file_new_file_input_hint">文件夹名</string>
    <string name="dialog_file_new_file_name">未命名文件夹</string>
    <string name="dialog_file_new_file_btn">确定</string>

    <string name="file_dialog_collection_title">收藏成功</string>
    <string name="file_dialog_enclosure_title">添加成功</string>

    <string name="dialog_file_detail_title">文件详情</string>
    <string name="dialog_file_detail_name">文件名</string>
    <string name="dialog_file_detail_option_time">修改时间</string>
    <string name="dialog_file_detail_option_size">文件大小</string>
    <string name="dialog_file_detail_option_number">文件数量</string>
    <string name="dialog_file_detail_option_path">文件路径</string>
    <string name="dialog_file_detail_btn">确定</string>
    <string name="dialog_file_detail_number_hint">加载中...</string>
    <string name="dialog_file_detail_number_text1">个文件，</string>
    <string name="dialog_file_detail_number_text2">个文件夹</string>

    <string name="dialog_confirm_title">提示</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>


    <!--其他-->
    <string name="dialog_permission_title">权限申请</string>
    <string name="dialog_permission_msg">为了您能正常使用办公助手，需要开启以下权限</string>
    <string name="dialog_permission_err">权限开启失败，将无法使用对应功能</string>

    <string name="folder_detail">个文件</string>
    <string name="root_catalog">内部存储</string>

    <string name="error_110">Access Token过期失效	</string>
    <string name="error_1">服务器内部错误，请再次请求</string>
    <string name="error_2">服务暂不可用，请再次请求</string>
    <string name="error_4">集群超限额</string>
    <string name="error_17">每天请求量超限额</string>
    <string name="error_18">QPS超限额</string>
    <string name="error_19">请求总量超限额</string>
    <string name="error_100">包含了无效或错误参数</string>
    <string name="error_111">Access token过期</string>
    <string name="error_283504">网络请求失败</string>
    <string name="error_283505">服务器返回数据异常</string>
    <string name="error_283506">JNI加载异常</string>
    <string name="error_283601">身份验证错误</string>
    <string name="error_283602">时间戳不正确，可能是设备时间异常</string>
    <string name="error_283700">服务器内部错误</string>
    <string name="error_216200">空的图片</string>
    <string name="error_216202">图片大小错误</string>
    <string name="error_216401">内部错误</string>
    <string name="error_216500">未知错误</string>
    <string name="error_216632">unknown error</string>
    <string name="error_parse_no_text">未识别出任何信息</string>
    <string name="error_parse">解析失败</string>
    <string name="error_ok">成功</string>

    <string name="about_title">关于</string>
    <string name="about_hint">意见反馈、bug提交：</string>
    <string name="about_email">1782408400@qq.com</string>

    <string name="shortcut_search">文件搜索</string>
    <string name="shortcut_search_message">文件搜索暂时无法使用</string>
    <string name="shortcut_email">发邮件</string>
    <string name="shortcut_email_message">邮件发送暂时无法使用</string>
</resources>
