<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/base_dialog_bg">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/close"
        android:padding="15dp"
        android:id="@+id/iv_rename_close"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/dialog_file_rename_title"
            android:textSize="@dimen/dialog_title"
            android:textColor="@color/barText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_file_rename_hint"
            android:textSize="@dimen/dialog_hint"
            android:textColor="@color/leftMenu"
            android:layout_marginBottom="20dp"/>
        
        <EditText
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@drawable/main_input_bg"
            android:gravity="center"
            android:lines="1"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/dialogInput"
            android:textColorHint="@color/dialogInputHint"
            android:layout_marginBottom="20dp"
            android:selectAllOnFocus="true"
            android:hint="@string/dialog_file_rename_input_hint"
            android:id="@+id/et_rename_name"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/main_btn_selector"
            android:text="@string/dialog_file_rename_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/loginInput"
            android:elevation="@dimen/elevation"
            android:layout_marginBottom="25dp"
            android:id="@+id/btn_rename_confirm"/>

    </LinearLayout>
    
</RelativeLayout>